# JNIDemo

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/jnidemo/activity/: JNIActivity.java
app/src/main/java/com/example/jnidemo/jni/: JNIDemo.java
app/src/main/jnicpp/: CMakeLists.txt
app/src/main/jnicpp/inc/: jnidemo.h
app/src/main/jnicpp/src/: jnidemo.cpp
app/src/main/res/layout/: activity_jniactivity.xml
gradle/wrapper/: gradle-wrapper.properties
